Atualiza landing page com ajustes finais

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
           <h1><span class="grad">APOSTE SEM PERDER</span><br></h1>
 <p class="sub">
-  Cadastre-se e deposite <b>R$20</b> e receba <b>R$20</b>
+  Cadastre-se, deposite <b>R$20</b> e receba <b>R$20</b>
   <span class="gold">de volta no PIX.</span>
 </p>
           <div class="chips">
@@ -352,10 +352,10 @@
           <div class="headline">Oferta limitada para novos usuários</div>
 
           <ul class="steps">
-            <li class="step"><div class="num">1</div><div class="txt"><b>Faça o cadastro</b> pelo botão abaixo</div></li>
-            <li class="step"><div class="num">2</div><div class="txt"><b>Ative com R$20</b> para liberar a condição</div></li>
-            <li class="step"><div class="num">3</div><div class="txt">Após aprovação, você recebe <b>R$20 de retorno</b></div></li>
-            <li class="step"><div class="num">4</div><div class="txt">Envie o <b>comprovante</b> no WhatsApp para validação</div></li>
+            <li class="step"><div class="num">1</div><div class="txt"><b>Cadastre-se pela plataforma</b> e valide documentos</div></li>
+            <li class="step"><div class="num">2</div><div class="txt"><b>Deposite R$20,00</b> em sua conta </div></li>
+            <li class="step"><div class="num">3</div><div class="txt">Solicite o reembolso<b> via WhatsApp</b></div></li>
+            <li class="step"><div class="num">4</div><div class="txt"> <b>comprovante</b> no WhatsApp para validação</div></li>
           </ul>
 
           <div class="btns">
