Ajusta rodapé +18 e adiciona background mobile

--- a/index.html
+++ b/index.html
@@ -302,6 +302,12 @@
       h1{ font-size: 30px; }
       .card{ padding: 22px 18px; }
       .btn{ padding: 15px 12px; }
+      
+      /* Background mobile com estátua */
+      .hero{
+        background-image: url('images/estatua-mobile.png');
+        animation: none;
+      }
     }
 
     @media (prefers-reduced-motion: reduce){
@@ -370,7 +376,7 @@
   </section>
 
   <div class="legal">
-    <img src="images/tag18-branca.png" alt="+18" style="height:80px;">
+    <img src="images/tag18-branca.png" alt="+18" style="width:180px; height:auto;">
   </div>
 
   <script>
