--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 </p>
           <div class="chips">
             <div class="chip"><span class="ico">⚡</span> Liberação <b>rápida</b></div>
-            <div class="chip"><span class="ico"></span> Suporte no <b>WhatsApp</b></div>
+            <div class="chip"><span class="ico">📲</span> Suporte no <b>WhatsApp</b></div>
           </div>
 
           <div class="headline">Oferta limitada para novos usuários</div>
@@ -376,7 +376,7 @@
   </section>
 
   <div class="legal">
-    <img src="images/tag18-branca.png" alt="+18" style="width:180px; height:auto;">
+    <img src="images/Untitled design.png" alt="+18" style="width:180px; height:auto;">
   </div>
 
   <script>
