--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   </section>
 
   <div class="legal">
-    <img src="images/Untitled design.png" alt="+18" style="width:180px; height:auto;">
+    <img src="images/tag18-branca.png" alt="+18" style="width:180px; height:auto;">
   </div>
 
   <script>
