--- a/index.html
+++ b/index.html
@@ -322,14 +322,15 @@
       left:0; right:0; bottom:0;
       background:#fff;
       color:#000;
-      padding: 8px 14px;
-      font-size: 12px;
+      padding: 16px 14px;
+      font-size: 13px;
       display:flex;
       gap: 12px;
       align-items:center;
       justify-content:center;
       flex-wrap:wrap;
       z-index:60;
+      min-height: 70px;
     }
     .legal strong{ font-weight:900; }
   </style>
