Ajusta chip suporte e amplia rodape

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 </p>
           <div class="chips">
             <div class="chip"><span class="ico">⚡</span> Liberação <b>rápida</b></div>
-            <div class="chip"><span class="ico">📲</span> Suporte no <b>WhatsApp</b></div>
+            <div class="chip">Suporte no <b>WhatsApp</b></div>
           </div>
 
           <div class="headline">Oferta limitada para novos usuários</div>
@@ -377,7 +377,7 @@
   </section>
 
   <div class="legal">
-    <img src="images/tag18-branca.png" alt="+18" style="width:180px; height:auto;">
+    <img src="images/tag18-branca.png" alt="+18" style="width:240px; height:auto;">
   </div>
 
   <script>
