Fix: confirm registro_10976 link

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
   <script>
     // CONFIGURADO
-    const CADASTRO_URL = "https://superbet.bet.br/registro?btag=a_20430b_431c_Cadastro&affid=572&utm_source=572&utm_medium=431&utm_campaign=20430+&pid=incomeaccess_int&af_sub1=a_20430b_431c_Cadastro&af_siteid=2406-60-572-20430&siteid=20430";
+    const CADASTRO_URL = "https://brsuperbet.com/registro_10976";
     const WHATS_URL = "https://wa.me/5516988193058?text=Oi,%20ja%20me%20cadastrei%20e%20segue%20o%20comprovante";
     function handleCadastroClick(e){
       e.preventDefault();
